# piano

./: .gitignore  Cargo.toml
docs/: impl_plan.md  prd.md
src/: app.rs  main.rs
src/game/: engine.rs  feedback.rs  mod.rs  progress.rs
src/midi/: device.rs  input.rs  mod.rs
src/music/: difficulty.rs  library.rs  mod.rs  parser.rs
src/notation/: mod.rs  notes.rs  renderer.rs  staff.rs
src/ui/: main_window.rs  mod.rs  settings.rs  song_browser.rs
